# tessie-accelerated-26q2

accel-p-escrow/: Cargo.toml
accel-p-escrow/src/instructions/: make.rs  refund.rs  take.rs
accel-p-escrow/src/state/: escrow.rs
accel-p-escrow/src/tests/: mod.rs
accel_anchor-esrow/: Anchor.toml
accel_anchor-esrow/programs/anchor-escrow-q2-2026/src/: lib.rs
accel_anchor-esrow/programs/anchor-escrow-q2-2026/tests/: mod.rs
generic-storage/: Cargo.toml
generic-storage/src/: error.rs  main.rs  models.rs  serializer.rs  storage.rs
magicblock-er-example/: Anchor.toml  package.json
magicblock-er-example/cron/: cron.ts
magicblock-er-example/programs/er-state-account/: Cargo.toml
magicblock-er-example/programs/er-state-account/src/: lib.rs
magicblock-er-example/programs/er-state-account/src/instructions/: close_user.rs  delegate.rs  init_user.rs  mod.rs  scheduled_update.rs  undelegate.rs  update_commit.rs  update_user.rs  update_vrf.rs  update_vrf_er.rs
magicblock-er-example/programs/er-state-account/src/state/: user_account.rs
magicblock-er-example/tests/: er-state-account.ts
pinocchio-fundraiser/: Cargo.toml
pinocchio-fundraiser/src/: lib.rs
pinocchio-fundraiser/src/instructions/: check_contributions.rs  contribute.rs  initialize.rs  mod.rs  refund.rs
pinocchio-fundraiser/src/state/: contributor.rs  fundraiser.rs  mod.rs
pinocchio-fundraiser/src/tests/: mod.rs
solana-gpt-tuktuk/: Anchor.toml  package.json
solana-gpt-tuktuk/programs/solana-gpt-tuktuk/: Cargo.toml
solana-gpt-tuktuk/programs/solana-gpt-tuktuk/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
solana-gpt-tuktuk/programs/solana-gpt-tuktuk/src/instructions/: initialize.rs  receive_gpt_response.rs  schedule_gpt.rs
solana-gpt-tuktuk/programs/solana-gpt-tuktuk/tests/: test_initialize.rs
solana-gpt-tuktuk/tests/: solana-gpt-tuktuk.ts
todo-queue/: Cargo.toml
todo-queue/src/: main.rs  models.rs  queue.rs  storage.rs
transfer_hook_vault/: Anchor.toml
transfer_hook_vault/programs/transfer_hook_vault/: Cargo.toml
transfer_hook_vault/programs/transfer_hook_vault/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
transfer_hook_vault/programs/transfer_hook_vault/src/instructions/: init_extra_account_meta.rs  initialize.rs  initialize_vault_token_accounts.rs  mint_token.rs  transfer_hook.rs  whitelist_operations.rs
transfer_hook_vault/programs/transfer_hook_vault/tests/: test_initialize.rs
whitelist-transfer-hook-q2/: Anchor.toml  package-lock.json  package.json
whitelist-transfer-hook-q2/programs/whitelist-transfer-hook-q2/: Cargo.toml
whitelist-transfer-hook-q2/programs/whitelist-transfer-hook-q2/src/: lib.rs  state.rs
whitelist-transfer-hook-q2/programs/whitelist-transfer-hook-q2/src/instructions/: init_extra_account_meta.rs  initialize_whitelist.rs  mint_token.rs  transfer_hook.rs  whitelist_operations.rs
whitelist-transfer-hook-q2/programs/whitelist-transfer-hook-q2/tests/: test_initialize.rs
