[package]
name = "pinocchio-fundraiser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { version = "0.11.1", features = ["cpi"] }
pinocchio-associated-token-account = "0.4.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.6.1"
pinocchio-token = "0.6.0"

[dev-dependencies]
litesvm = "0.12.0"
litesvm-token = "0.12.0"
solana-clock = "3.0.1"
solana-instruction = "3.1.0"
solana-keypair = "3.1.0"
solana-message = "3.0.1"
solana-native-token = "3.0.0"
solana-pubkey = "4.1.0"
solana-sdk-ids = "3.1.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.2"
spl-associated-token-account = "8.0.0"
