[package]
name = "solana-gpt-tuktuk"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_gpt_tuktuk"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
litesvm-test = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
tuktuk-program = { git = "https://github.com/AvhiMaz/tuktuk", branch = "chore/bump-versions" }
getrandom = { version = "0.2.15", features = ["custom"] }

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
